# Grid

./: Makefile.am  configure.ac
Grid/algorithms/: FFT.h  LinearOperator.h
Grid/allocator/: AlignedAllocator.h  MemoryManagerCache.cc
Grid/communicator/: Communicator_base.h  Communicator_mpi3.cc  Communicator_none.cc  SharedMemory.h  SharedMemoryMPI.cc
Grid/cshift/: Cshift_mpi.h
Grid/lattice/: Lattice_slicesum_core.h  PaddedCell.h
Grid/stencil/: Stencil.h
Grid/threads/: Accelerator.h  Threads.h
Grid/util/: Init.cc  Lexicographic.h
HMC/: ComputeWilsonFlow.cc
benchmarks/: Benchmark_memory_bandwidth_compare.cc  Benchmark_su3_compare.cc  Benchmark_usqcd.cc  Makefile.am
systems/: WorkArounds.txt
systems/Aurora/: config-command  sourceme.sh
systems/Frontier/: config-command  sourceme.sh
systems/Frontier-rocm631/: sourceme631.sh
systems/mac-arm/: config-command-mpi
systems/sdcc-genoa/: bench.slurm  bench2.slurm  config-command  sourceme.sh
systems/spack-linux/: config-command  sourceme.sh  spack-install
tests/: Test_dwf_dslash_repro.cc
tests/core/: Test_fft_pf.cc
tests/debug/: Test_general_coarse_hdcg.cc  Test_general_coarse_pvdagm.cc  Test_heatbath_dwf_eofa_gparity.cc  Test_heatbath_mobius_eofa_gparity.cc  Test_padded_cell.cc  Test_padded_cell_staple.cc  Test_reweight_dwf_eofa_gparity.cc  Test_reweight_mobius_eofa_gparity.cc
tests/forces/: Test_dwf_gpforce.cc  Test_dwf_gpforce_eofa.cc  Test_gpdwf_force.cc  Test_gpdwf_force_1f_2f.cc  (+3 more)
visualisation/: CMakeLists.txt  FieldDensity.py  FieldDensityAnimate.cxx  README  cmake-command
(+44 files in other folders)
